hphp/test/slow/parser/hh-reserved-name-noreturn-1.php.expectf
Fatal error: Cannot use `Noreturn` as a type name as it is reserved in %s on line 3
